# Ghost-in-the-cell

./: .gitignore  3  CMakeLists.txt  Ghost-in-the-shell.cbp  README.md  a  curr  currentcode.cpp  currű  tests
src/: Configuration.cpp  CurrentFile.cpp  Logging.cpp  StringUtils.hpp  Teacher.cpp  logging.cpp  logging.hpp  main.cpp  sample.hpp  test.cpp
src/Arena/: Arena.cpp  Arena.hpp  ArenaFiller.hpp
src/Logging/: CMakeLists.txt
src/MyProgram/: MyProgram.cpp  MyProgram.hpp
src/Objects/: Action.hpp  Battle.cpp  Battle.hpp  Board.cpp  Board.hpp  Bomb.hpp  CMakeLists.txt  Command.hpp  Distance.hpp  Entity.cpp  Entity.hpp  Factory.cpp  Factory.hpp  Id.cpp  Id.hpp  Link.cpp  Link.hpp  MoveException.hpp  MovingEntity.cpp  MovingEntity.hpp  Owner.cpp  Owner.hpp  Player.hpp  Position.cpp  Table.hpp  TestBoard.cpp  TestBoard.hpp  Troop.cpp  Troop.hpp
src/Objects/Helper/: InjectableBoard.cpp  InjectableBoard.hpp  Position.cpp  Position.hpp  TestPosition.cpp  TestPosition.hpp
src/Objects/Metrics/: BoardMetrics.cpp  BoardMetrics.hpp
src/Objects/Stream/: EntityStringBuilder.cpp  EntityStringBuilder.hpp  EntityStringBuilderException.hpp  EntityWriter.cpp  EntityWriter.hpp  InitStringBuilder.cpp  InitStringBuilder.hpp  TestEntityStringBuilder.cpp  TestEntityStringBuilder.hpp  TestEntityWriter.cpp  TestEntityWriter.hpp
src/Player/: CMakeLists.txt  DummyPlayer.hpp  HumanPlayer.cpp  HumanPlayer.hpp  LazyPlayer.cpp  LazyPlayer.hpp  codingame_template.cpp
src/Program/: CMakeLists.txt  DummyPlayer.hpp  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  LazyPlayer.cpp  LazyPlayer.hpp  Player.hpp  RandomPlayer.cpp  RandomPlayer.hpp  Simulator.hpp
src/Simulation/: CMakeLists.txt  Configuration.hpp  Simulation.cpp  Simulation.hpp  SimulationEntity.cpp  SimulationEntity.hpp  simulation.hpp
src/Test/: InjectableBoard.cpp  InjectableBoard.hpp  TestUtils.cpp  TestUtils.hpp
test/: InjectableBoard.hpp  TestStringUtils.cpp  TestStringUtils.hpp  TestUtils.cpp  TestUtils.hpp  test.cpp
test/Objects/: TestBoard.cpp  TestPosition.cpp  TestPosition.hpp
test/Objects/Stream/: TestEntityStringBuilder.cpp  TestEntityWriter.cpp
